feat:finish swagger endpoint
