# handlers/product_handler.go
@@ -20,6 +20,18 @@ func NewProductHandler(service *services.ProductService) *ProductHandler {
 	return &ProductHandler{Service: service}
 }
 
+// GetProducts godoc
+// @Summary Get all products
+// @Description get all products
+// @Tags products
+// @Security BearerAuth
+// @Produce json
+// @Param q query string false "name search by name"
+// @Param limit query int false "limit" default(10)
+// @Param page query int false "page" default(1)
+// @Success 200 {object} utils.APIResponse
+// @Failure 400 {object} utils.APIResponse
+// @Router /api/product [get]
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query()
 
@@ -66,6 +78,16 @@ func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// GetProductByID godoc
+// @Summary Get Product By Id
+// @Description get product by id
+// @Tags products
+// @Security BearerAuth
+// @Produce json
+// @Param id path uint true "id"
+// @Success 200 {object} utils.APIResponse
+// @Failure 400 {object} utils.APIResponse
+// @Router /api/product/{id} [get]
 func (h *ProductHandler) GetProductById(w http.ResponseWriter, r *http.Request) {
 	idStr := chi.URLParam(r, "id")
 
@@ -89,10 +111,21 @@ func (h *ProductHandler) GetProductById(w http.ResponseWriter, r *http.Request) 
 
 }
 
+// CreateProduct godoc
+// @Summary Create product
+// @Description create new product
+// @Tags products
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param request body dto.CreateProductRequest true "Create Product Request"
+// @Success 201 {object} utils.APIResponse
+// @Failure 400 {object} utils.APIResponse
+// @Router /api/product/create [post]
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var req dto.CreateProductRequest
 
-	if r.Header.Get("Content-Type") != "application/json" {
+	if !strings.Contains(r.Header.Get("Content-Type"), "application/json") {
 		utils.Error(w, http.StatusUnsupportedMediaType, "INVALID_CONTENT_TYPE", "Content-Type must be application/json")
 		return
 	}
@@ -120,6 +153,17 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	utils.JSON(w, http.StatusCreated, response)
 }
 
+// DeleteProduct godoc
+// @Summary Delete product
+// @Description delete product
+// @Tags products
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path uint true "id"
+// @Success 200 {object} utils.APIResponse
+// @Failure 400 {object} utils.APIResponse
+// @Router /api/product/delete/{id} [delete]
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	idStr := chi.URLParam(r, "id")
 	idInt, err := strconv.Atoi(idStr)
@@ -137,6 +181,18 @@ func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	utils.JSON(w, http.StatusOK, "Product deleted")
 }
 
+// UpdateProduct godoc
+// @Summary Update product
+// @Description update product
+// @Tags products
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param request body dto.UpdateProductRequest true "Update Product Request"
+// @Param id path uint true "id"
+// @Success 200 {object} utils.APIResponse
+// @Failure 400 {object} utils.APIResponse
+// @Router /api/product/update/{id} [patch]
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	idStr := chi.URLParam(r, "id")
 
